--- a/src/styles/agendas.css
+++ b/src/styles/agendas.css
@@ -1,12 +1,13 @@
-.containerHome {
+.containerAgenda {
     display: flex;
     flex-direction: column;
 }
 
 .divList {
     display: flex;
-    flex-direction: column
-}
+    flex-direction: column;
+   /* overflow-x: scroll;**/
+}   
 
 .divCabecalho {
     display: flex;
@@ -32,41 +33,3 @@
     border-bottom: 1px solid black
 }
 
-@media (max-width:1024) {
-
-    .containerHome-min {
-        width: 100%;
-
-    }
-
-    .divList-min {
-        display: flex;
-        flex: 1px;
-        align-items: center;
-        width: 100%;
-    }
-
-    .divCabecalho-min {
-        display: flex;
-        margin: 20px;
-        align-items: center;
-        width: 100%;
-    }
-
-    .divLinhas-min {
-        margin: 20px;
-        align-items: center;
-        justify-content: space-around;
-        width: 100%;       
-        padding-left: 20px;
-
-    }
-
-    button {
-        font-size: 24px;
-    }
-
-    h2 {
-        font-size: 24px;
-    }
-}
