--- a/src/styles/responsive-site.css
+++ b/src/styles/responsive-site.css
@@ -19,7 +19,7 @@
     }
 
     .menuItem-min {
-        font-size: 24px;
+        font-size: 14px;
         font-weight: bold;
     }
 
@@ -43,12 +43,16 @@
     }
 
     .divLinhas-min {
-        margin: 20px;
+        margin:5px;
         align-items: center;
         justify-content: space-around;
         width: 100%;
-        padding-left: 20px;
+        padding-left:10px;
 
+    }
+    .divLinhasConteudo-min{
+        display: flex;    
+        width: 100%;
     }
 
     button {
