--- a/src/styles/agendamento.css
+++ b/src/styles/agendamento.css
@@ -5,6 +5,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 
 .divForm {
@@ -13,16 +14,19 @@
 
 .divButton {
     display: flex;
+    justify-content: space-around;
+    width: 350px;
+    margin:0px 0px 0px -10px;
 }
 
 input {
     margin: 10px;
     border-radius: 5px;
-    border: 1px solid #8a2be2;
+    border: 2px solid #FF1493;
     padding: 5px;
     font-size: 16px;
     width: 300px;
-    color: #8a2be2;
+    color: #FF1493;
 }
 
 input::placeholder {
@@ -33,5 +37,5 @@ input::placeholder {
     display: block;
     justify-content: center;
     align-items: center;
-    flex-direction:column;  
+    flex-direction: column;
 }
