--- a/src/styles/pageHomeAdmin.css
+++ b/src/styles/pageHomeAdmin.css
@@ -6,7 +6,7 @@
     margin: 10px;
     flex-direction: column;
     border-radius: 0px 10px 10px 0px;
-    background-color: #8a2be2;
+    background-color: #FF1493;
     height: 850px
 }
 
