--- a/src/styles/agendas.css
+++ b/src/styles/agendas.css
@@ -17,7 +17,8 @@
     justify-content: space-around;
     width: 60%;
     padding-left: 10px;
-    border-bottom: 2px solid black
+    border-bottom: 2px solid black;
+        
 }
 
 .divLinhas {
@@ -30,7 +31,7 @@
     width: 60%;
     border-radius: 10px;
     padding-left: 10px;
-    border-bottom: 1px solid black
+    border-bottom: 1px solid black; 
 }
 
 .divButtonEditar{
