--- a/src/styles/pageHomeAdmin.css
+++ b/src/styles/pageHomeAdmin.css
@@ -1,5 +1,6 @@
 .container {
     display: flex;
+    background-color: black;
 }
 
 .sideBar {
@@ -7,7 +8,7 @@
     flex-direction: column;
     border-radius: 0px 10px 10px 0px;
     background-color: #FF1493;
-    height: 850px
+    height: 900px
 }
 
 .divImage {
